fix scroll on safari

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -30,6 +30,7 @@
 	gap: 15px;
 	margin: 0 auto;
 	padding: 10px;
+	padding-bottom: 20px;
 }
 
 .navigation a {
@@ -118,7 +119,7 @@
 
 .coins {
 	padding: 10px;
-	padding-top: 42px;
+	padding-top: 30px;
 	display: flex;
 	align-items: center;
 	font-size: 42px;
